--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="index.html">
           <img
             class="logo"
-            src="./images/logo.png"
+            src="images/logo.png"
             alt=""
         /></a>
         <i class="fa-solid fa-bars fa-lg"></i>
